# vibe-music-playlist-manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  Program.cs  README.md  ai_chat.md  appsettings.json  auth.hpp  auth_module.f90  build.zig  build.zig.zon  config.json  database.sql  db_manager.hpp  db_module.f90  debug.sh  docker-compose.yml  env_module.f90  fortran_fcgi.f90  implementation_plan.md  install.sh  main.cc  main.cpp  mp3_module.f90  music-manager.asd  music-manager.csproj  music-manager.service  nginx.conf  package-lock.json  package.json  problems.md  prompt.md  restart.sh  results.md  (+69 more)
Controllers/: AdminController.cs  AuthController.cs  PlaylistAdminController.cs  PublicController.cs
Data/: MusicDbContext.cs
Middleware/: AdminAuthMiddleware.cs
Migrations/: 20251221165337_InitialCreate.Designer.cs  20251221165337_InitialCreate.cs  MusicDbContextModelSnapshot.cs
Models/: Playlist.cs  PlaylistSong.cs  Song.cs
Services/: AuthService.cs  FileService.cs
Views/Admin/: Index.cshtml
Views/Auth/: Login.cshtml
Views/PlaylistAdmin/: Create.cshtml  Delete.cshtml  Edit.cshtml  Index.cshtml
Views/Public/: Index.cshtml  Player.cshtml
Views/Shared/: _AdminLayout.cshtml  _Layout.cshtml
app/Middleware/: AdminAuth.ts
app/Models/: Playlist.ts  Song.ts
controllers/: AuthController.cc  AuthController.h  PlaylistController.cc  PlaylistController.h
database/migrations/: 1765473034835_playlists.ts  1765473125496_songs.ts
docs/adonisjs/: 01-setup-guide.md  02-migrations.md  03-models.md  04-controllers.md  05-middleware.md  06-routes.md  07-views-layouts.md  08-views-admin.md  09-views-frontend.md  10-quick-commands.md
filters/: AuthFilter.cc  AuthFilter.h
models/: Playlist.cc  Playlist.h  Song.cc  Song.h
src/: app.js  auth.lisp  auth.zig  config.lisp  db.lisp  db.rs  db.zig  main.lisp  main.rs  main.zig  models.rs  package.lisp  router.zig  routes.lisp  upload.lisp
start/: kernel.ts  routes.ts
template/: 404.html  admin_dashboard.html  admin_playlist_form.html  index.html  login.html  player.html
templates/: base.html  dashboard.html  edit_playlist.html  index.html  login.html  player.html  player_winamp.html
tests/: main-test.lisp
views/: admin_dashboard.csp  admin_login.csp  player.csp  playlist_form.csp
(+63 files in other folders)
