[package]
name = "music-manager"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-multipart = "0.6"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
sanitize-filename = "0.5"
tera = "1"
env_logger = "0.11"
log = "0.4"
